Fixed font. Now it must be visible in deployed version

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Inter";
-  src: url("../Inter/Inter-Italic-VariableFont_opsz\,wght.ttf");
+  src: url("/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf");
 }
 
 * {
